Fixed misalignment with 6th image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -193,7 +193,6 @@ img.social {
 
 .image3 {
   position: relative;
-  display: inline-block;
   margin-top: 20px;
   width: 100%;
 }
@@ -205,7 +204,6 @@ img.social {
 
 .image5 {
   position: relative;
-  display: inline-block;
   margin-top: 20px;
   width: 100%;
 }
